data/derived/fa15/progs/unify/prog0631.ml.out
Characters 35-42:
  let f a x = x (pipe List.hd fs) in
                      ^^^^^^^
Error: This expression has type 'a list -> 'a
       but an expression was expected of type (('b -> 'b) -> 'b -> 'b) list
